--- a/recipes/sunday-sauce.html
+++ b/recipes/sunday-sauce.html
@@ -6,6 +6,12 @@
         </head>
     <body>
         <h1>Sunday Sauce</h1>
+        <img src="../images/sunday-sauce.jpeg"alt="pasta sauce">
+        <p>Sunday sauce is an Italian-American styled sauce that
+            incorporates all the delicious and savory flavors of 
+            the old world in to an easy and repeatable sauce that 
+            is good for not just Sunday, but any and every day of 
+            the week!</p>
     </body>
-    
+
     </html>
