Redownload to fix accidental deletion

--- a/recipes/sunday-sauce.html
+++ b/recipes/sunday-sauce.html
@@ -6,7 +6,7 @@
         </head>
     <body>
         <h1>Sunday Sauce</h1>
-        <img src="../images/sunday-sauce.jpeg"alt="pasta sauce">
+        <img src="../images/sunday-sauce.jpg"alt="pasta sauce">
         <p>Sunday sauce is an Italian-American styled sauce that
             incorporates all the delicious and savory flavors of 
             the old world into an easy and repeatable sauce that 
