Add "Description" to Header

--- a/recipes/sunday-sauce.html
+++ b/recipes/sunday-sauce.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Sunday Sauce</h1>
         <img src="../images/sunday-sauce.jpg"alt="pasta sauce">
+        <p><b>Description</b></p>
         <p>Sunday sauce is an Italian-American styled sauce that
             incorporates all the delicious and savory flavors of 
             the old world into an easy and repeatable sauce that 
