Use a new sauce picture with better sizing

--- a/recipes/sunday-sauce.html
+++ b/recipes/sunday-sauce.html
@@ -6,7 +6,7 @@
         </head>
     <body>
         <h1>Sunday Sauce</h1>
-        <img src="../images/sunday-sauce.jpg"alt="pasta sauce">
+        <img src="../images/sunday-sauce-large.jpg" alt="pasta sauce" width="800" height="500">
         <p><b>Description</b></p>
         <p>Sunday sauce is an Italian-American styled sauce that
             incorporates all the delicious and savory flavors of 
