Fix format so all headers match

--- a/recipes/sunday-sauce.html
+++ b/recipes/sunday-sauce.html
@@ -7,12 +7,28 @@
     <body>
         <h1>Sunday Sauce</h1>
         <img src="../images/sunday-sauce-large.jpg" alt="pasta sauce" width="800" height="500">
-        <p><b>Description</b></p>
+        
+        <h2><p><b><u>Description</u></b></p></h2>
         <p>Sunday sauce is an Italian-American styled sauce that
             incorporates all the delicious and savory flavors of 
             the old world into an easy and repeatable sauce that 
             is good for not just Sunday, but any and every day of 
             the week!</p>
+        
+        <h2><p><b><u>Ingredients</u></b></p></h2>
+        <ul>
+            <li>One 28oz can of crushed tomato sauce</li>
+            <li>Six hot or sweet italian sausage links</li>
+            <li>Half a large white onion</li>
+            <li>Five large cloves of garlic</li>
+            <li>Two tablespoons of EVOO</li>
+            <li>One tablespoon of butter</li>
+            <li>One tablespoon of crushed red pepper</li>
+            <li>Half a tablespoon of oregano</li>
+            <li>Half a tablespoon of dried basil</li>
+        </ul>
+
+        <h2><b><u>Instructions</u></b></h2>
     </body>
 
     </html>
