Add instructions for sunday sauce

--- a/recipes/sunday-sauce.html
+++ b/recipes/sunday-sauce.html
@@ -19,7 +19,7 @@
         <ul>
             <li>One 28oz can of crushed tomato sauce</li>
             <li>Six hot or sweet italian sausage links</li>
-            <li>Half a large white onion</li>
+            <li>Half a large white onion (diced)</li>
             <li>Five large cloves of garlic</li>
             <li>Two tablespoons of EVOO</li>
             <li>One tablespoon of butter</li>
@@ -29,6 +29,15 @@
         </ul>
 
         <h2><b><u>Instructions</u></b></h2>
+        <ol>
+            <li>Add EVOO to pot with sausage and diced onions. Cook until sausage browned and onions soften.</li>
+            <li>Add garlic and cook until fragrant.</li>
+            <li>Add crushed tomato sauce and bring to boil.</li>
+            <li>Drop down to a simmer and add crushed red pepper, oregano, and basil.</li>
+            <li>Simmer for about one hour, stirring occasionally.</li>
+            <li>Add butter and simmer one more hour.</li>
+            <li>Continue to stir occasionally and season to taste.</li>
+        </ol>
     </body>
 
     </html>
