--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/sunday-sauce.html">Sunday Sauce</a>
+        <ul>
+        <li><a href="recipes/sunday-sauce.html">Sunday Sauce</a></li>
+        <li><a href="recipes/classic-chili.html">Classic Chili</a></li>
+        </ul>
     </body>
 </html>
