Add list of ingredients

--- a/recipes/classic-chili.html
+++ b/recipes/classic-chili.html
@@ -1,38 +1,38 @@
-!DOCTYPE html>
+<!DOCTYPE html>
     <html lang="en">
         <head>
             <meta charset="utf-8">
             <title>Classic Chili</title>
         </head>
     <body>
-        <h1>Sunday Sauce</h1>
+        <h1>Classic Chili</h1>
         <img src="../images/classic-chili.jpg" alt="classic chili" width="800" height="500">
         
         <h2><p><b><u>Description</u></b></p></h2>
-        <p>Tired from a long days work? This classic chili is the perfect answer for a weeknight meal because it can be made in minutes. All you need to chop is an onion. A hearty bowl of this will warm you up even on the coldest of nights! Careful though, this chili packs some heat!</p>
+        <p>Tired from a long days work? This classic chili is the perfect answer for a weeknight meal because it can be made in minutes. All you need to chop is an onion and a hearty bowl of this will warm you up even on the coldest of nights! Careful though, this chili packs some heat!</p>
         
         <h2><p><b><u>Ingredients</u></b></p></h2>
         <ul>
-            <li>One 28oz can of crushed tomato sauce</li>
-            <li>Six hot or sweet italian sausage links</li>
-            <li>Half a large white onion (diced)</li>
-            <li>Five large cloves of garlic</li>
-            <li>Two tablespoons of EVOO</li>
-            <li>One tablespoon of butter</li>
-            <li>One tablespoon of crushed red pepper</li>
-            <li>Half a tablespoon of oregano</li>
-            <li>Half a tablespoon of dried basil</li>
+            <li>One tablespoon olive oil</li>
+            <li>1 medium yellow onion (diced)</li>
+            <li>One pound ground beef</li>
+            <li>Two and a half tablespoons chili powder</li>
+            <li>Two tablespoons ground cumin</li>
+            <li>Two tablespoons granulated sugar</li>
+            <li>Two tablespoons tomato paste</li>
+            <li>One tablespoon garlic powder</li>
+            <li>One and a half teaspoons salt</li>
+            <li>Half a teaspoon black pepper</li>
+            <li>Quarter teaspoon cayenne pepper</li>
+            <li>One and a half cup beef broth</li>
+            <li>One 16oz can diced tomatoes</li>
+            <li>One 16oz can red kidney beans</li>
+            <li>One 8oz can tomato sauce</li>          
         </ul>
 
         <h2><b><u>Instructions</u></b></h2>
         <ol>
-            <li>Add EVOO to pot with sausage and diced onions. Cook until sausage browned and onions soften.</li>
-            <li>Add garlic and cook until fragrant.</li>
-            <li>Add crushed tomato sauce and bring to boil.</li>
-            <li>Drop down to a simmer and add crushed red pepper, oregano, and basil.</li>
-            <li>Simmer for about one hour, stirring occasionally.</li>
-            <li>Add butter and simmer one more hour.</li>
-            <li>Continue to stir occasionally and season to taste.</li>
+
         </ol>
     </body>
 
