--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
         <li><a href="recipes/sunday-sauce.html">Sunday Sauce</a></li>
         <li><a href="recipes/classic-chili.html">Classic Chili</a></li>
+        <li><a href="recipes/vegetable-soup.html">Vegetable Soup</a></li>
         </ul>
     </body>
 </html>
