Add unordered ingredients list and ordered instructions list

--- a/recipes/vegetable-soup.html
+++ b/recipes/vegetable-soup.html
@@ -13,13 +13,31 @@
         
         <h2><p><b><u>Ingredients</u></b></p></h2>
         <ul>
-
+            <li>Two Tbsp olive oil</li>
+            <li>One and a half cups medium yellow onion (chopped)</li>
+            <li>Two cups peeled and chopped carrots</li>
+            <li>One and a quarter cups chopped celery</li>
+            <li>Four cloves garlic (minced)</li>
+            <li>Four 16oz cans low-sodium chicken broth or vegetable broth</li>
+            <li>Two 16oz cans diced tomatoes</li>
+            <li>Three cups peeled and 1/2-inch thick diced potatoes</li>
+            <li>One third cup chopped fresh parsley</li>
+            <li>Two bay leaves</li>
+            <li>One half teaspoon dried thyme, or 1 Tbsp fresh thyme leaves</li>
+            <li>Salt and freshly ground black pepper to taste</li>
+            <li>One and half cups chopped frozen or fresh green beans</li>
+            <li>One and a quarter cups frozen or fresh corn</li>
+            <li>One cup frozen or fresh peas</li>
         </ul>
 
         <h2><b><u>Instructions</u></b></h2>
         <ol>
-
+            <li>Heat olive oil in a large pot over medium-high heat.</li>
+            <li>Add onions, carrots, and celery and saute 4 minutes then add garlic and saute 30 seconds longer.</li>
+            <li>Add in broth, tomatoes, potatoes, parsley, bay leaves, thyme and season with salt and pepper to taste.</li>
+            <li>Bring to a boil, then add green beans.</li>
+            <li>Reduce heat to medium-low, cover and simmer until potatoes are almost fully tender, about 20 - 30 minutes.</li>
+            <li>Add corn and peas and cook 5 minutes longer. Serve warm.</li>
         </ol>
     </body>
-
     </html>
