--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Cooking Recipes</title>
+        <link rel=stylesheet href="styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li><a href="recipes/sunday-sauce.html">Sunday Sauce</a></li>
-        <li><a href="recipes/classic-chili.html">Classic Chili</a></li>
-        <li><a href="recipes/vegetable-soup.html">Vegetable Soup</a></li>
+        <li><a href="recipes/sunday-sauce.html", class="red">Sunday Sauce</a></li>
+        <li><a href="recipes/classic-chili.html", class="blue">Classic Chili</a></li>
+        <li><a href="recipes/vegetable-soup.html", class="green">Vegetable Soup</a></li>
         </ul>
     </body>
 </html>
