Fix recipe links destination

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li><a href="recipes/sunday-sauce.html", class="red">Sunday Sauce</a></li>
-        <li><a href="recipes/classic-chili.html", class="blue">Classic Chili</a></li>
-        <li><a href="recipes/vegetable-soup.html", class="green">Vegetable Soup</a></li>
+        <li><a href="recipes/sunday-sauce/sunday-sauce.html", class="red">Sunday Sauce</a></li>
+        <li><a href="recipes/classic-chili/classic-chili.html", class="blue">Classic Chili</a></li>
+        <li><a href="recipes/vegetable-soup/vegetable-soup.html", class="green">Vegetable Soup</a></li>
         </ul>
     </body>
 </html>
