Add css stylesheet and selector tags

--- a/recipes/vegetable-soup/vegetable-soup.html
+++ b/recipes/vegetable-soup/vegetable-soup.html
@@ -3,16 +3,17 @@
         <head>
             <meta charset="utf-8">
             <title>Vegetable Soup</title>
+            <link rel="stylesheet" href="styles.css">
         </head>
     <body>
-        <h1>Vegetable Soup</h1>
-        <img src="../images/vegetable-soup.jpg" alt="vegetable soup" width="800" height="500">
+        <h1 class="title">Vegetable Soup</h1>
+        <img src="../../images/vegetable-soup.jpg" alt="vegetable soup" width="800" height="500">
         
-        <h2><p><b><u>Description</u></b></p></h2>
-        <p>Not only is this soup delicious but it's also easy to make. It just takes some chopping and a bit of simmering until you've got a soup everyone will love! You'll definitely want to add this to your dinner or lunch rotation. And it yields a pot full and makes great leftovers!</p>
+        <h2 class="head"><p><b><u>Description</u></b></p></h2>
+        <p class="line">Not only is this soup delicious but it's also easy to make. It just takes some chopping and a bit of simmering until you've got a soup everyone will love! You'll definitely want to add this to your dinner or lunch rotation. And it yields a pot full and makes great leftovers!</p>
         
-        <h2><p><b><u>Ingredients</u></b></p></h2>
-        <ul>
+        <h2 class="head"><p><b><u>Ingredients</u></b></p></h2>
+        <ul class="text">
             <li>Two Tbsp olive oil</li>
             <li>One and a half cups medium yellow onion (chopped)</li>
             <li>Two cups peeled and chopped carrots</li>
@@ -30,8 +31,8 @@
             <li>One cup frozen or fresh peas</li>
         </ul>
 
-        <h2><b><u>Instructions</u></b></h2>
-        <ol>
+        <h2 class="head"><b><u>Instructions</u></b></h2>
+        <ol class="text">
             <li>Heat olive oil in a large pot over medium-high heat.</li>
             <li>Add onions, carrots, and celery and saute 4 minutes then add garlic and saute 30 seconds longer.</li>
             <li>Add in broth, tomatoes, potatoes, parsley, bay leaves, thyme and season with salt and pepper to taste.</li>
