--- a/recipes/classic-chili/classic-chili.html
+++ b/recipes/classic-chili/classic-chili.html
@@ -3,10 +3,11 @@
         <head>
             <meta charset="utf-8">
             <title>Classic Chili</title>
+            <link rel="stylesheet" href="styles.css">
         </head>
     <body>
         <h1>Classic Chili</h1>
-        <img src="../images/classic-chili.jpg" alt="classic chili" width="800" height="500">
+        <img src="../../images/classic-chili.jpg" alt="classic chili" width="800" height="500">
         
         <h2><p><b><u>Description</u></b></p></h2>
         <p>Tired from a long days work? This classic chili is the perfect answer for a weeknight meal because it can be made in minutes. All you need to chop is an onion and a hearty bowl of this will warm you up even on the coldest of nights! Careful though, this chili packs some heat!</p>
