Add css selector tags

--- a/recipes/classic-chili/classic-chili.html
+++ b/recipes/classic-chili/classic-chili.html
@@ -6,14 +6,14 @@
             <link rel="stylesheet" href="styles.css">
         </head>
     <body>
-        <h1>Classic Chili</h1>
+        <h1 class="title">Classic Chili</h1>
         <img src="../../images/classic-chili.jpg" alt="classic chili" width="800" height="500">
         
-        <h2><p><b><u>Description</u></b></p></h2>
-        <p>Tired from a long days work? This classic chili is the perfect answer for a weeknight meal because it can be made in minutes. All you need to chop is an onion and a hearty bowl of this will warm you up even on the coldest of nights! Careful though, this chili packs some heat!</p>
+        <h2 class="head"><p><b><u>Description</u></b></p></h2>
+        <p class="line">Tired from a long days work? This classic chili is the perfect answer for a weeknight meal because it can be made in minutes. All you need to chop is an onion and a hearty bowl of this will warm you up even on the coldest of nights! Careful though, this chili packs some heat!</p>
         
-        <h2><p><b><u>Ingredients</u></b></p></h2>
-        <ul>
+        <h2 class="head"><p><b><u>Ingredients</u></b></p></h2>
+        <ul class="text">
             <li>One tablespoon olive oil</li>
             <li>1 medium yellow onion (diced)</li>
             <li>One pound ground beef</li>
@@ -31,8 +31,8 @@
             <li>One 8oz can tomato sauce</li>          
         </ul>
 
-        <h2><b><u>Instructions</u></b></h2>
-        <ol>
+        <h2 class="head"><b><u>Instructions</u></b></h2>
+        <ol class="text">
             <li>Add the olive oil to a large soup pot and place it over medium-high heat for to minutes. Add the diced onion. Cook for 5 minutes, stirring occasionally.</li>
             <li>Add the ground beef to the pot. Break it apart with a wooden spoon. Cook for 6-7 minutes, until the beef is browned, stirring occasionally.</li>
             <li>Add the chili powder, cumin, sugar, tomato paste, garlic powder, salt, pepper, and cayenne. Stir until well combined.</li>
