--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="head">Rob's Recipes</h1>
         <ul>
         <li><a href="recipes/sunday-sauce/sunday-sauce.html", class="red">Sunday Sauce</a></li>
         <li><a href="recipes/classic-chili/classic-chili.html", class="blue">Classic Chili</a></li>
