--- a/recipes/sunday-sauce/sunday-sauce.html
+++ b/recipes/sunday-sauce/sunday-sauce.html
@@ -7,7 +7,7 @@
         
         <body>
         <h1 class="title">Sunday Sauce</h1>
-        <img src="../../images/sunday-sauce-large.jpg" alt="pasta sauce" width="800" height="500" class="image">
+        <img src="../../images/sunday-sauce-large.jpg" alt="pasta sauce" height="500" class="image">
         <link rel="stylesheet" href="styles.css">
         
         <h2 class="head"><p><b><u>Description</u></b></p></h2>
