--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <link rel=stylesheet href="styles.css">
     </head>
 
-    <body>
-        <h1 class="head">Rob's Recipes</h1>
-        <ul>
-        <li><a href="recipes/sunday-sauce/sunday-sauce.html", class="red">Sunday Sauce</a></li>
-        <li><a href="recipes/classic-chili/classic-chili.html", class="blue">Classic Chili</a></li>
-        <li><a href="recipes/vegetable-soup/vegetable-soup.html", class="green">Vegetable Soup</a></li>
-        </ul>
-    </body>
+<body>
+<h1 class="head">Rob's Recipes</h1>
+    <div>
+        <a href="recipes/sunday-sauce/sunday-sauce.html", class="red">Sunday Sauce</a>
+        <a href="recipes/classic-chili/classic-chili.html", class="blue">Classic Chili</a>
+        <a href="recipes/vegetable-soup/vegetable-soup.html", class="green">Vegetable Soup</a>
+    </div>
+</body>
 </html>
